[tool.poetry]
name = "rostools"
version = "0.1.0"
description = "Toolkit for Railway Operation Simulator"
authors = [" Kristian Zarębski <krizar312@gmail.com>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.9"
jsbeautifier = "^1.14.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rostools = 'rostools:rostools'