[tool.poetry]
name = "railostools"
version = "1.1.0"
description = "API and CLI for interaction with Railway Operation Simulator"
authors = ["Kristian Zarębski <krizar312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
click = "^8.0.4"
semver = "^2.13.0"
toml = "^0.10.2"
pycountry = "^22.3.5"
opcua = "^0.98.13"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.7.0"
coverage = "^6.3.2"
pre-commit = "^2.17.0"
unimport = "^0.9.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
railostools = 'railostools.cli:railostools'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
[testenv]
"""
