[tool.poetry]
name = "railostools"
version = "1.1.1"
description = "API and CLI for interaction with Railway Operation Simulator"
authors = ["Kristian Zarębski <krizar312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pydantic = "^1.9.0"
click = "^8.0.4"
semver = "^2.13.0"
toml = "^0.10.2"
pycountry = "^22.3.5"
configparser = "^5.2.0"
pandas = "^1.4.2"
wikidspark = { "git" = "https://github.com/artemis-beta/wikidspark.git" }

[tool.poetry.group.dev.dependencies]
unimport = "^0.12.3"
pytest-mock = "^3.7.0"
coverage = "^6.3.2"
pre-commit = "^2.17.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
railostools = 'railostools.cli:railostools'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
[testenv]
"""
