[project]
name = "railostools"
version = "1.2.1"
description = "API and CLI for interaction with Railway Operation Simulator"
authors = [
    {name = "Kristian Zarębski",email = "krizar312@gmail.com"}
]
license = {text = "GPL-v3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "semver (>=3.0.4,<4.0.0)",
    "igraph (>=0.11.8,<0.12.0)"
]

[project.scripts]
railostools = "railostools.cli:railostools"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.4",
]

[tool.ruff]
lint.extend-select = ["C901", "T201"]
lint.mccabe.max-complexity = 11

[tool.pytest.ini_options]
markers = [
    "ttb_strings: timetable string tests",
    "ttb_parsing: tests smaller parsing operations in timetables",
    "metadata: tests for metadata parsing",
    "session: tests for the session data parsing",
    "rly_parsing: tests parsing of rly file",
    "perflog: performance log parser tests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, py313
[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313
[testenv]
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"