[package]
name = "railostools"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
chrono = "0.4.19"
semver = "1.0.7"
rust_iso3166 = "0.1.4"
serde = {version = "1.0.136", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"